Fixed splash screen alignment

--- a/mastui/app.css
+++ b/mastui/app.css
@@ -59,7 +59,7 @@ SplashScreen {
 }
 
 #version {
-    width: 100%;
+    width: auto;
     text-align: center;
 }
 
